--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "star-wars-rp-hub",
+  "name": "star-wars-rp-hub-client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,8 +17,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
